update slack confirmed users route
